tests/types/errors/assign_array_str_to_array_i32.mog
Array<i32> nums = ["one", "two"];
